fixed menu overlapping body

--- a/css/site.css
+++ b/css/site.css
@@ -2,5 +2,5 @@
 .container-fluid {
 	margin-right: auto;
 	margin-left: auto;
-	max-width: 1200px;
+	max-width: 100%;
 }
